Added encryption and document opening

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	</head>
 	<body>
 		<div id="app"></div>
+        <script src="/lib/encryption/des.js"></script>
 		<script src="/assets/js/dist/bundle.js"></script>
 	</body>
 </html>
