--- a/login.html
+++ b/login.html
@@ -2,7 +2,15 @@
 <html lang="en">
 <head>
 </head>
+
 <body>
-	<h1>Login</h1>
+    
+	<form method="post" action="https://login.salesforce.com/index.jsp">
+        <input type="hidden" name="un" id="username" />
+        <input type="hidden" name="pw" id="password" />
+    </form>
+    
+    <script src="/lib/encryption/des.js"></script>
+    <script src="/assets/js/src/login.js"></script>
 </body>
 </html>
